--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation "com.github.StephenVinouze:MaterialNumberPicker:1.1.0"
 }
