--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation "com.github.StephenVinouze:MaterialNumberPicker:1.1.0"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0"
+
+    compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.2'
+    kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.2'
 }
