--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,16 @@ android {
 dependencies {
 
     def dagger_version = "2.16"
-    def nav_version = "2.1.0"
+    def nav_version = "2.2.0"
     def room_version = "2.2.3"
+    def paging_version = "2.1.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.fragment:fragment:1.2.0-rc05"
+    implementation "androidx.fragment:fragment:1.2.0"
 
 
     //Dagger2
@@ -76,4 +77,6 @@ dependencies {
 
     compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.2'
     kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.2'
+
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 }
