--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,15 +20,37 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+
+
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+  testdev:
+    working_directory: ~/code
+      docker:
+          - image: circleci/android:api-28-alpha
+      environment:
+        JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
       - run:
           name: Run Tests
           command: ./gradlew lint test
       - run:
           name: Run Tests
           command: ./gradlew testDebugUnitTest
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/reports
           destination: reports
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: app/build/test-results
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+workflows:
+  version: 2
+  build-and-test:
+    jobs:
+      - build
+      - testdev:
+        requires:
+          - build
+        filters:
+          branches:
+            only:
+              - dev
